Net::HTTP connection for oauth working

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Dashboard#index</h1>
-<p>Find me in app/views/dashboard/index.html.erb</p>
+<%= link_to "Basic OAuth", simple_oauth_index_path %>
+<%= link_to "RestClient OAuth", restclient_oauth_index_path %>
+<%= link_to "OAuth Gem OAuth", oauth_index_path %>
+<%= link_to "Omnioauth", omnioauth_index_path %>
