--- a/app/views/restclient_oauth/show.html.erb
+++ b/app/views/restclient_oauth/show.html.erb
@@ -1,2 +1,3 @@
-<h1>RestclientOauth#show</h1>
-<p>Find me in app/views/restclient_oauth/show.html.erb</p>
+<%= @auth_result %>
+
+<%= link_to "Dashboard", root_path %>
