--- a/app/views/restclient_oauth/index.html.erb
+++ b/app/views/restclient_oauth/index.html.erb
@@ -1,2 +1,3 @@
-<h1>RestclientOauth#index</h1>
-<p>Find me in app/views/restclient_oauth/index.html.erb</p>
+<%= link_to "Get GitHub Info", "https://github.com/login/oauth/authorize?scope=user:email&client_id=#{ENV["GITHUB_OAUTH_FUN_KEY"]}" %>
+
+<%= link_to "Dashboard", root_path %>
